add a protected route to get paginated list of users
